Squash some bugz. Start user's posts page.

--- a/pokemon_react_app/public/style.css
+++ b/pokemon_react_app/public/style.css
@@ -30,6 +30,10 @@ body {
   color: #fff;
 }
 
+.App h3 {
+  color: #fff;
+}
+
 .ShowUser {
   color: #fff;
 }
